[tool.poetry]
name = "fast-api-cache-testing"
version = "0.1.0"
description = ""
authors = ["codeanish <anish@codeanish.com>"]
readme = "README.md"
packages = [{include = "fast_api_cache_testing"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
requests = "^2.31.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
